fix condense toggle overlap with sidebar

--- a/components-template-app/src/app/core/side-menu/condense/styles/condense.scss
+++ b/components-template-app/src/app/core/side-menu/condense/styles/condense.scss
@@ -22,7 +22,7 @@ app-condense {
 	&::before
 	{
 	  content: '';
-	  width: 2px;
+	  width: 0px;
 	  height: 100%;
 	  position: absolute;
 	  left: 5px;
@@ -31,12 +31,13 @@ app-condense {
 	.condense-toogle
 	{
 		visibility: hidden;
-		width: 20px;
+		width: 15px;
 		height: 50px;
 		padding: 15px 0px;
 		position: absolute;
 		top: calc(50% - 25px);
-		padding-left: 5px;
+		padding-left: 0;
+		margin-left: 5px;
 		cursor: pointer;
 
 		&::before
